--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oasido.dev-by-nexxeln",
+  "name": "oasido.dev-nexxel-fork",
   "version": "0.1.0",
   "private": true,
   "scripts": {
